--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
         </div>
         </div>
         <div class="Coming-Soon-outer">
-        <div id="Coming-Soon" data-name="Coming Soon" class="Coming-Soon" style="transform: translateX(0px) scale(1); opacity: 1;"><div key="0">Coming Soon</div>
+        <div id="Coming-Soon" data-name="Coming Soon" class="Coming-Soon"><div key="0">Coming Soon</div>
         </div>
         </div>
       </div>
