--- a/index.html
+++ b/index.html
@@ -147,7 +147,27 @@
   left:0;
   top:0;
 }
-</style><script>
+</style>
+<style>
+    
+body::-webkit-scrollbar {
+  width: 10px; 
+    /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: #6b6b6b;        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #ffffff;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px #6b6b6b;  /* creates padding around scroll thumb */
+}
+
+    </style>
+
+<script>
 /*
 * anime.js v3.2.1
 * (c) 2020 Julian Garnier
