--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: #6b6b6b;        /* color of the tracking area */
+  background: #f4f6f8;        /* color of the tracking area */
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #f4f6f8;    /* color of the scroll thumb */
+  background-color: #ffffff;    /* color of the scroll thumb */
   border-radius: 20px;       /* roundness of the scroll thumb */
   border: 3px #6b6b6b;  /* creates padding around scroll thumb */
 }
