--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #e6e6e6;    /* color of the scroll thumb */
+  background-color: #b8b8b8;    /* color of the scroll thumb */
   border-radius: 20px;       /* roundness of the scroll thumb */
   border: 3px #6b6b6b;  /* creates padding around scroll thumb */
 }
