--- a/ayush/index.html
+++ b/ayush/index.html
@@ -19,7 +19,7 @@
   display:block;
   margin:auto;
   width:100%;
-  height:auto;
+  height:100%;
   pointer-events:auto;
 }
 .Page-outer{
@@ -32,9 +32,9 @@
   pointer-events:none;
   width:100%;
   margin-left:0;
-  height:589px;
-  min-width:200px;
-  max-width:1440px;
+  height:100%;
+  min-width:100%;
+  max-width:100%;
   margin:auto;
   background-color:rgba(244, 246, 248, 1);
   overflow:hidden;
