--- a/adverto/index.html
+++ b/adverto/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta charset="UTF-8">
   <title>Adverto</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="./style.css">
 
+    <meta charset="UTF-8">
+  <meta name="description" content="Adverto">
+  <meta name="keywords" content="Roblox, Advertisement">
+  <meta name="author" content="Teron Inc">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <!-- partial:index.partial.html -->
