--- a/adverto/index.html
+++ b/adverto/index.html
@@ -26,7 +26,7 @@
             <a href="#" id="services">Services</a>
             <a href="#" id="work">Our work</a>
             <a href="#" id="contact">Contact</a>
-            ]
+            <a href="#" id="ads">Global Advertisement</a>
             <p>Copyright @ 2021 Adverto</p>
           </div>
         </div>
