--- a/adverto/index.html
+++ b/adverto/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+  <meta charset="UTF-8">
   <title>Adverto</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="./style.css">
 
-    <meta charset="UTF-8">
-  <meta name="description" content="Adverto">
-  
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -24,6 +23,7 @@
             <a href="#" id="services">Services</a>
             <a href="#" id="work">Our work</a>
             <a href="#" id="contact">Contact</a>
+            ]
             <p>Copyright @ 2021 Adverto</p>
           </div>
         </div>
