--- a/adverto/index.html
+++ b/adverto/index.html
@@ -21,7 +21,7 @@
         <div class="overlay">
           <div class="overlayContent">
             <a href="#" id="services">Services</a>
-            <a href="#" id="work">Advertisement</a>
+            <a href="#" id="work">Work</a>
             <a href="#" id="contact">Contact</a>
             ]
             <p>Copyright @ 2021 Adverto</p>
