--- a/adverto/index.html
+++ b/adverto/index.html
@@ -21,8 +21,9 @@
         <div class="overlay">
           <div class="overlayContent">
             <a href="#" id="services">Services</a>
-            <a href="#" id="work">Work</a>
+            <a href="#" id="work">Our work</a>
             <a href="#" id="contact">Contact</a>
+            <a href="#" id="ads">Global Advertisement</a>
             ]
             <p>Copyright @ 2021 Adverto</p>
           </div>
@@ -67,7 +68,6 @@
     </div>
   </div>
 </div>
-
 <div class="section services">
   <div class="sectionWrapper">
     <h6 class>what we offer</h6>
@@ -95,26 +95,7 @@
     </div>
   </div>
 </div>
-<style>
-  body::-webkit-scrollbar {
-    width: 10px;
-    /* width of the entire scrollbar */
-  }
 
-  body::-webkit-scrollbar-track {
-    background: #ffffff;
-    /* color of the tracking area */
-  }
-
-  body::-webkit-scrollbar-thumb {
-    background-color: #6b6b6b;
-    /* color of the scroll thumb */
-    border-radius: 20px;
-    /* roundness of the scroll thumb */
-    border: 3px #6b6b6b;
-    /* creates padding around scroll thumb */
-  }
-</style>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 <script src='https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js'></script>
