--- a/adverto/index.html
+++ b/adverto/index.html
@@ -72,7 +72,7 @@
   <div class="sectionWrapper">
     <h6 class>what we offer</h6>
     <h2>Our services</h2>
-    <p class="description">We provide high level devlopment tool for airline and techs to grow their business.</p>
+    <p class="description">We provide high level devlopment tool for airline and techs to grow their business.</p><br><br>
     <div class="square blue"></div>
     <div class="grid">
       <!-- Web Design -->
@@ -83,13 +83,13 @@
       <!-- Branding -->
       <div class="card">
         <h3>Open Marketplace</h3>
-        <p>People use our platforms to easily find their perfect product, find a great job, sell things.</p>
+        <p>People use our platforms to easily find their perfect product, find a great job, sell things.</p><br><br>
       </div>
       <!-- Social Media Marketing -->
       <div class="card">
         <div>
           <h3>Small Sized to Large Sizes Business</h3>
-          <p>And we help thousands of businesses find their customers too.</p>
+          <p>And we help thousands of businesses find their customers too.</p><br><br>
         </div>
       </div>
     </div>
