--- a/adverto/index.html
+++ b/adverto/index.html
@@ -83,7 +83,7 @@
       <!-- Branding -->
       <div class="card">
         <h3>Open Marketplace</h3>
-        <p>People use our platforms to easily find their perfect product, find a great job, sell things.</p><br><br>
+        <h6>People use our platforms to easily find their perfect product, find a great job, sell things.</h6><br><br>
       </div>
       <!-- Social Media Marketing -->
       <div class="card">
