--- a/adverto/index.html
+++ b/adverto/index.html
@@ -83,13 +83,13 @@
       <!-- Branding -->
       <div class="card">
         <h3>Open Marketplace</h3>
-        <h11>People use our platforms to easily find their perfect product, find a great job, sell things.</h11><br><br>
+        <h11 style="color:white">People use our platforms to easily find their perfect product, find a great job, sell things.</h11><br><br>
       </div>
       <!-- Social Media Marketing -->
       <div class="card">
         <div>
           <h3>Small Sized to Large Sizes Business</h3>
-          <p>And we help thousands of businesses find their customers too.</p><br><br>
+          <h11 style="color:white">And we help thousands of businesses find their customers too.</h11><br><br>
         </div>
       </div>
     </div>
