--- a/adverto/index.html
+++ b/adverto/index.html
@@ -78,7 +78,7 @@
       <!-- Web Design -->
       <div class="card">
         <h3>Customer Value</h3>
-        <p>We love to unlock value for our customers.</p>
+        <h11 style="color:white">We love to unlock value for our customers.</h11>
       </div>
       <!-- Branding -->
       <div class="card">
