--- a/adverto/index.html
+++ b/adverto/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="overlay">
           <div class="overlayContent">
-            <a href="#" id="services"><h7>Services</h7></a>
+            <a href="#" id="services">Services</a>
             <a href="#" id="work">Our work</a>
             <a href="#" id="contact">Contact</a>
             <a href="#" id="ads">Global Advertisement</a>
