--- a/adverto/ads/index.html
+++ b/adverto/ads/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Adverto</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="./style.css">
 
+</head>
+<body>
+<!-- partial:index.partial.html -->
+
+  
+<div class="section services">
+  <div class="sectionWrapper">
+    <h6 class>Global Advertisment</h6>
+    <h2>List of All Ads</h2>
+    <p class="description"></p>
+    <div class="square blue"></div>
+    <div class="grid">
+      <!-- Web Design -->
+      <div class="card">
+        <h3>Name -1 </h3>
+        <p>Description</p>
+      <a href="#" class="button button--animated">Join Server</a>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+<script src='https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js'></script><script  src="./script.js"></script>
+
+</body>
+</html>
