--- a/adverto/ads/index.html
+++ b/adverto/ads/index.html
@@ -23,6 +23,19 @@
         <p>Description</p>
       <a href="#" class="button button--animated">Join Server</a>
       </div>
+
+<div class="card">
+        <h3>Name -1 </h3>
+        <p>Description</p>
+      <a href="#" class="button button--animated">Join Server</a>
+      </div>
+
+<div class="card">
+        <h3>Name -1 </h3>
+        <p>Description</p>
+      <a href="#" class="button button--animated">Join Server</a>
+      </div>
+
       </div>
     </div>
   </div>
