--- a/adverto/ads/index.html
+++ b/adverto/ads/index.html
@@ -19,22 +19,11 @@
     <div class="grid">
       <!-- Web Design -->
       <div class="card">
-        <h3>Name -1 </h3>
-        <p>Description</p>
-      <a href="#" class="button button--animated">Join Server</a>
+        <h3>Veno</h3>
+        <p>Cool tech with Cool Products</p>
+      <a href="https://discord.gg/BvvfSAyRfD" class="button button--animated">Join Server</a>
       </div>
 
-<div class="card">
-        <h3>Name -1 </h3>
-        <p>Description</p>
-      <a href="#" class="button button--animated">Join Server</a>
-      </div>
-
-<div class="card">
-        <h3>Name -1 </h3>
-        <p>Description</p>
-      <a href="#" class="button button--animated">Join Server</a>
-      </div>
 
       </div>
     </div>
