--- a/new/index.html
+++ b/new/index.html
@@ -27,8 +27,8 @@
   width:100%;
   margin-left:0;
   height:1080px;
-  min-width:200px;
-  max-width:1280px;
+  min-width:100%;
+  max-width:100%;
   margin:auto;
   background-color:rgba(242, 242, 242, 1);
   overflow:hidden;
