--- a/new/index.html
+++ b/new/index.html
@@ -4,7 +4,24 @@
 
   <title>Teron</title>
  
+<style>
+    
+body::-webkit-scrollbar {
+  width: 10px; 
+    /* width of the entire scrollbar */
+}
 
+body::-webkit-scrollbar-track {
+  background: #808080;        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #ffffff;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px #6b6b6b;  /* creates padding around scroll thumb */
+}
+
+    </style>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:600">
     <style>
     .websiteBody{
