--- a/new/index.html
+++ b/new/index.html
@@ -12,7 +12,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: #808080;        /* color of the tracking area */
+  background: ##f3f2f3;        /* color of the tracking area */
 }
 
 body::-webkit-scrollbar-thumb {
