--- a/new/index.html
+++ b/new/index.html
@@ -16,9 +16,9 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #ffffff;    /* color of the scroll thumb */
+  background-color: #0B1E20;    /* color of the scroll thumb */
   border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 3px #6b6b6b;  /* creates padding around scroll thumb */
+  border: 3px #0B1E20;  /* creates padding around scroll thumb */
 }
 
     </style>
