--- a/talent/index.html
+++ b/talent/index.html
@@ -1,1 +1,2 @@
-<h2>TEST</h2>
+<h2>Website under delopment kindly check social pages for more info!</h2>
+<a href="https://teron.codes">Return to Homepage</a>
