--- a/talent/index.html
+++ b/talent/index.html
@@ -5,12 +5,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="discrption" content="KIMUN2022" />
+    <meta name="discrption" content="Teron" />
     <meta name="keyword"
-        content="mun,IYMun" />
+        content="TERON" />
 
     <!--  Title -->
-    <title>Kalinga International Model United Nations 2022</title>
+    <title>Teron Talent Management</title>
 
     <!-- Font Google -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800&display=swap" rel="stylesheet">
@@ -45,7 +45,7 @@
         <div class="preloader-after"></div>
         <div class="preloader-before"></div>
         <div class="preloader-block">
-            <div class="title">KIMUN</div>
+            <div class="title">Teron</div>
             <div class="percent">0</div>
             <div class="loading">loading...</div>
         </div>
@@ -150,12 +150,12 @@
                             <div class="row justify-content-center align-items-center h-100">
                                 <div class="project-title" id="dsn-hero-parallax-title" style="visibility: inherit; opacity: 1; top: 0px; transform: translate3d(0px, 0px, 0px);">
                                     <div class="sub-text-header">
-                                        <h5>Kalinga International Model United Nations Presents</h5>
+                                        <h5>Teron Presents</h5>
                                     </div>
 
                                     <div class="title-text-header">
                                         <span class="title-text-header-inner">
-                                            <span>KIMUN 2022</span>
+                                            <span>Talent Management Solution</span>
                                         </span>
                                     </div>
 
