--- a/talent/index.html
+++ b/talent/index.html
@@ -90,8 +90,8 @@
             <div class="header-container">
                 <div class="logo main-logo">
                     <a href="index.html">
-                        <img class="dark-logo" src="assets/img/logo-dark.png" alt="" />
-                        <img class="light-logo" src="./logow.png" alt="" />
+                        <img class="dark-logo" src="https://app.quest.ai/public_neo/29703/95208/assets/images/image_1__3__removebg_preview_1.png" alt="" />
+                        <img class="light-logo" src="https://app.quest.ai/public_neo/29703/95208/assets/images/image_1__3__removebg_preview_1.png" alt="" />
                     </a>
                 </div>
 
@@ -381,7 +381,7 @@
 
                                         <ul>
                                             
-                                            <li><a href="https://www.instagram.com/iymodelun/"><i class="fab fa-instagram"></i></a></li>
+                                            <li><a href="https://www.instagram.com/teron.inc/"><i class="fab fa-instagram"></i></a></li>
                                             <li><a href="#"><i class="fab fa-facebook"></i></a></li>
 
                                         </ul>
@@ -420,8 +420,8 @@
 
                     <div class="copyright">
                         <div class="text-center">
-                            <p>© 2022 KIMUN</p>
-                            <div class="copright-text over-hidden">Designed by <a class="link-hover" data-hover-text="DSN Grid" href="#" target="_blank">KIMUN@2022</a>
+                            <p>© 2021 TERON</p>
+                            <div class="copright-text over-hidden">Designed by <a class="link-hover" data-hover-text="DSN Grid" href="#" target="_blank">TERON@2021</a>
                             </div>
                         </div>
                     </div>
