--- a/talent/index.html
+++ b/talent/index.html
@@ -175,7 +175,7 @@
                                 <div class="intro-content-text">
 
                                     <h2 data-dsn-move="-30" data-dsn-duration="100%" data-dsn-opacity="1.2" data-dsn-responsive="tablet" class="dsn-move-section" style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">
-                                        About <br> TERON 2021
+                                        About <br> TERON Talent Management
                                     </h2>
 
                                     <p data-dsn-animate="animate" class="dsn-active"><span class="dsn-wrapper"><span class="dsn-word-wrapper">Social media is best to talk to your existing and prospective customers, engage with those who will promote your brand. It’s also one of the most rapidly changing marketing channels, with new features and updates constantly being released by Facebook, Twitter, Instagram. It can be hard to keep up, or even know where to start! That’s the job of our social media team who have all the experience needed to make the most of your profiles – whatever the nature of your business.
@@ -395,7 +395,7 @@
                                     <h4 class="footer-title">Navigation</h4>
                                     <nav>
                                         <ul>
-                                            <li><a href="#">KIMUN 2022</a>
+                                            <li><a href="#">TERON INC</a>
                                             </li>
                                             <li><a href="#section1">About</a></li>
                                            
