--- a/talent/index.html
+++ b/talent/index.html
@@ -421,7 +421,7 @@
                     <div class="copyright">
                         <div class="text-center">
                             <p>© 2021 TERON</p>
-                            <div class="copright-text over-hidden">Designed by <a class="link-hover" data-hover-text="DSN Grid" href="#" target="_blank">TERON@2021</a>
+                            <div class="copright-text over-hidden">Designed by <a class="link-hover" data-hover-text="DSN Grid" href="https://www.instagram.com/ayushbindhani/" target="_blank">AYUSH BINDHANI</a>
                             </div>
                         </div>
                     </div>
