--- a/talent/index.html
+++ b/talent/index.html
@@ -90,8 +90,8 @@
             <div class="header-container">
                 <div class="logo main-logo">
                     <a href="index.html">
-                        <img class="dark-logo" src="https://app.quest.ai/public_neo/29703/95208/assets/images/image_1__3__removebg_preview_1.png" alt="" />
-                        <img class="light-logo" src="https://app.quest.ai/public_neo/29703/95208/assets/images/image_1__3__removebg_preview_1.png" alt="" />
+                        <img class="dark-logo" src="" alt="Teron" />
+                        <img class="light-logo" src="" alt="Teron" />
                     </a>
                 </div>
 
