--- a/talent/index.html
+++ b/talent/index.html
@@ -291,7 +291,7 @@
                             </div>
 
                             <div class="logo-box">
-                                <img src="https://www.spunkentertainment.com/img/brands_logo/Batch-3/Harman_Audio_Samsung.jpg" alt="">
+                                <img src="https://www.harman.com/_catalogs/masterpage/Harman.com/img/HARMAN-logo.png" alt="">
 
                                 <div class="info">
                                     <div class="content">
