--- a/talent/index.html
+++ b/talent/index.html
@@ -272,7 +272,7 @@
 
                         <div class="wapper-client">
                             <div class="logo-box">
-                                <img src="https://www.spunkentertainment.com/img/brands_logo/Batch-1/Youtube.jpg" alt="">
+                                <img src="./yt.png" alt="">
 
                                 <div class="info">
                                     <div class="content">
