--- a/talent/index.html
+++ b/talent/index.html
@@ -139,7 +139,7 @@
                             <div class="row justify-content-center align-items-center h-100">
                                 <div class="project-title" id="dsn-hero-parallax-title" style="visibility: inherit; opacity: 1; top: 0px; transform: translate3d(0px, 0px, 0px);">
                                     <div class="sub-text-header">
-                                        <h5>Hey there! You’re here because you’re a storyteller. At Terom, we believe that creators like you are the real ambassadors of pop-culture.
+                                        <h5>Hey there! You’re here because you’re a storyteller. At Teron, we believe that creators like you are the real ambassadors of pop-culture.
 </h5>
                                     </div>
 
