--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+<script src="https://vx3wc2n83kj3.statuspage.io/embed/script.js"></script>
 
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=5">
 
