--- a/new/index.html
+++ b/new/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html prefix="og: http://ogp.me/ns#" lang="en" style="height: 100%"><head>
   
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=5">
+  <script src="https://vx3wc2n83kj3.statuspage.io/embed/script.js"></script>
 
   <title>Teron</title>
+  
  
 <style>
     
