--- a/index.html
+++ b/index.html
@@ -2,60 +2,14 @@
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script>
-(function(){
+  <head>
+  <!-- Required for IE11 Only -->
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 
-    var frame = document.createElement('iframe');
-    frame.src = 'https://vx3wc2n83kj3.statuspage.io/embed/frame';
-    frame.style.position = 'fixed';
-    frame.style.border = 'none';
-    frame.style.boxShadow = '0 20px 32px -8px rgba(9,20,66,0.25)';
-    frame.style.zIndex = '9999';
-    frame.style.transition = 'left 1s ease, bottom 1s ease, right 1s ease';
-
-    var mobile;
-    if (mobile = screen.width < 450) {
-      frame.src += '?mobile=true';
-      frame.style.height = '20vh';
-      frame.style.width = '100vw';
-      frame.style.left = '-9999px';
-      frame.style.bottom = '-9999px';
-      frame.style.transition = 'bottom 1s ease';
-    } else {
-      frame.style.height = '115px';
-      frame.style.width = '320px';
-      frame.style.left = '-9999px';
-      frame.style.right = 'auto';
-      frame.style.bottom = '60px';
-    }
-
-    document.body.appendChild(frame);
-
-    var actions = {
-      showFrame: function() {
-        if (mobile) {
-          frame.style.left = '0';
-          frame.style.bottom = '0';
-        }
-        else {
-          frame.style.left = '60px';
-          frame.style.right = 'auto'
-        }
-      },
-      dismissFrame: function(){
-        frame.style.left = '-9999px';
-      }
-    }
-
-    window.addEventListener('message', function(event){
-      if (event.data.action && actions.hasOwnProperty(event.data.action)) {
-        actions[event.data.action](event.data);
-      }
-    }, false);
-
-    window.statusEmbedTest = actions.showFrame;
-})();
- </script>
+  <!-- Standard dependencies -->
+  <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-bundle.js"></script>
+  <script src="https://unpkg.com/@statuspage/status-widget/dist/index.js"></script>
+</head>
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=5">
 
   <title>Teron</title>
