--- a/new/index.html
+++ b/new/index.html
@@ -2,6 +2,14 @@
   
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=5">
   <script src="https://vx3wc2n83kj3.statuspage.io/embed/script.js"></script>
+  <head>
+  <!-- Required for IE11 Only -->
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+
+  <!-- Standard dependencies -->
+  <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-bundle.js"></script>
+  <script src="https://unpkg.com/@statuspage/status-widget/dist/index.js"></script>
+</head>
 
   <title>Teron</title>
   
@@ -864,6 +872,7 @@ body::-webkit-scrollbar-thumb {
       </div>
     </div>
     </div>
+<statuspage-widget src="https://metastatuspage.com"></statuspage-widget>
 
     
   
